tests/baselines/reference/inheritanceMemberFuncOverridingAccessor.errors.txt
inheritanceMemberFuncOverridingAccessor.ts(11,5): error TS2416: Property 'x' in type 'b' is not assignable to the same property in base type 'a'.
  Type '() => string' is not assignable to type 'string'.
inheritanceMemberFuncOverridingAccessor.ts(11,5): error TS2426: Class 'a' defines instance member accessor 'x', but extended class 'b' defines it as instance member function.


==== inheritanceMemberFuncOverridingAccessor.ts (2 errors) ====
    class a {
        get x() {
            return "20";
        }
        set x(aValue: string) {
    
        }
    }
    
    class b extends a {
        x() {
        ~
!!! error TS2416: Property 'x' in type 'b' is not assignable to the same property in base type 'a'.
!!! error TS2416:   Type '() => string' is not assignable to type 'string'.
        ~
!!! error TS2426: Class 'a' defines instance member accessor 'x', but extended class 'b' defines it as instance member function.
            return "20";
        }
    }